--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Test for co1</h1>
-<h2>Test for co2 1 test first ligne</h2>
+<h2>Test for co2 1 from branch2</h2>
+test
 </body>
 </html>
